[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Tuto_Powers.gd" type="Script" id=1]
[ext_resource path="res://Art/GUI/play.png" type="Texture" id=2]
[ext_resource path="res://Art/PowerUps/Roketluncher.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/PowerUp.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/PowerUps/Escudo.png" type="Texture" id=6]
[ext_resource path="res://Art/PowerUps/Multishot.png" type="Texture" id=7]
[ext_resource path="res://Scenes/PlayerShip.tscn" type="PackedScene" id=8]
[ext_resource path="res://Art/Background/fondo1.png" type="Texture" id=11]
[ext_resource path="res://Art/Fonts/Kenney Blocks.ttf" type="DynamicFontData" id=12]
[ext_resource path="res://Art/GUI/pause.png" type="Texture" id=13]
[ext_resource path="res://Art/GUI/home.png" type="Texture" id=14]
[ext_resource path="res://Art/GUI/yes.png" type="Texture" id=15]
[ext_resource path="res://Art/GUI/sfx_on.png" type="Texture" id=16]
[ext_resource path="res://Art/GUI/no.png" type="Texture" id=17]
[ext_resource path="res://Art/GUI/sfx_off.png" type="Texture" id=18]
[ext_resource path="res://Art/PowerUps/FondoPowerup.png" type="Texture" id=19]
[ext_resource path="res://Art/music/sound2/70BUCLE2.ogg" type="AudioStream" id=22]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": false,
"name": "play",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": false,
"name": "pause",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 14 ) ],
"loop": false,
"name": "home",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": false,
"name": "sfx_on",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "sfx_off",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "rocket",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "shield",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": false,
"name": "stair",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 12 )

[node name="Tuto_Powers" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}
Enemy = ExtResource( 4 )
PLAYER = ExtResource( 8 )
PowerUp = ExtResource( 5 )

[node name="BG" type="Node2D" parent="."]

[node name="ParallaxBackground" type="ParallaxBackground" parent="BG"]

[node name="ParallaxLayer" type="ParallaxLayer" parent="BG/ParallaxBackground"]
motion_mirroring = Vector2( 0, 3838 )

[node name="Sprite" type="Sprite" parent="BG/ParallaxBackground/ParallaxLayer"]
position = Vector2( 360, 200 )
texture = ExtResource( 11 )

[node name="ShooterTimer" type="Timer" parent="."]
autostart = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Buttons" type="Control" parent="."]
margin_top = 1150.0
margin_right = 40.0
margin_bottom = 1190.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pause_menu" type="Button" parent="Buttons"]
pause_mode = 2
margin_left = 560.0
margin_right = 608.0
margin_bottom = 48.0
rect_scale = Vector2( 2, 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="pauseBtt" type="AnimatedSprite" parent="Buttons/pause_menu"]
z_index = 3
frames = SubResource( 2 )
animation = "pause"
centered = false

[node name="home" type="Button" parent="Buttons/pause_menu"]
visible = false
margin_top = -140.0
margin_right = 48.0
margin_bottom = -92.0
flat = true

[node name="Home" type="AnimatedSprite" parent="Buttons/pause_menu/home"]
z_index = 3
frames = SubResource( 3 )
animation = "home"
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="Button_yes" type="Button" parent="Buttons/pause_menu/home"]
visible = false
margin_left = -70.0
margin_right = -22.0
margin_bottom = 48.0
flat = true

[node name="yes" type="Sprite" parent="Buttons/pause_menu/home/Button_yes"]
z_index = 3
texture = ExtResource( 15 )
centered = false

[node name="Button_no" type="Button" parent="Buttons/pause_menu/home"]
visible = false
margin_left = -140.0
margin_right = -92.0
margin_bottom = 48.0
flat = true

[node name="no" type="Sprite" parent="Buttons/pause_menu/home/Button_no"]
z_index = 3
texture = ExtResource( 17 )
centered = false

[node name="sfx" type="Button" parent="Buttons/pause_menu"]
visible = false
margin_top = -70.0
margin_right = 48.0
margin_bottom = -22.0
flat = true

[node name="sfx" type="AnimatedSprite" parent="Buttons/pause_menu/sfx"]
z_index = 3
frames = SubResource( 4 )
animation = "sfx_on"
centered = false

[node name="Powers" type="Control" parent="Buttons"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Power1" type="Button" parent="Buttons/Powers"]
margin_left = 40.0
margin_right = 100.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Buttons/Powers/Power1"]
frames = SubResource( 5 )
animation = "shield"
centered = false

[node name="Sprite" type="Sprite" parent="Buttons/Powers/Power1"]
position = Vector2( -8.93757, -9.02792 )
scale = Vector2( 0.993004, 0.981423 )
z_index = -1
texture = ExtResource( 19 )
centered = false

[node name="Power2" type="Button" parent="Buttons/Powers"]
margin_left = 200.0
margin_right = 260.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
flat = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="Buttons/Powers/Power2"]
frames = SubResource( 5 )
animation = "stair"
centered = false

[node name="Power3" type="Button" parent="Buttons/Powers"]
margin_left = 350.0
margin_right = 410.0
margin_bottom = 60.0
rect_scale = Vector2( 1.5, 1.5 )
flat = true

[node name="AnimatedSprite3" type="AnimatedSprite" parent="Buttons/Powers/Power3"]
frames = SubResource( 5 )
animation = "stair"
centered = false

[node name="Music_Green" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 22 )
volume_db = -10.0

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_right = 718.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 6 )
text = "Toca la pantalla dos veces 
para usar tus poderes"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="timeout" from="ShooterTimer" to="." method="_on_ShooterTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
[connection signal="pressed" from="Buttons/pause_menu" to="." method="_on_pause_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home" to="." method="_on_home_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home/Button_yes" to="." method="_on_Button_yes_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/home/Button_no" to="." method="_on_Button_no_pressed"]
[connection signal="pressed" from="Buttons/pause_menu/sfx" to="." method="_on_sfx_pressed"]
[connection signal="pressed" from="Buttons/Powers/Power2" to="." method="_on_Power2_pressed"]
[connection signal="pressed" from="Buttons/Powers/Power3" to="." method="_on_Power3_pressed"]
